# mini_dog

./: CMakeLists.txt  main.cpp  plan.cpp  plan.h
src/: kinematics.cpp  kinematics.h  main.cpp  plan.cpp  plan.h
